welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:-5: error: not found: value haveBaggle
			if (haveBaggle()) 
                            ^Program:14: error: value unary_! is not a member of Unit
}while (!vuBiscuit())
        ^Program:19: error: not found: value nbPas
		for (i<- 1 to nbPas){
                              ^